--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
     <link rel="stylesheet" href="/public/css/style.css">
-    <title>Joe Blow's Portfolio</title>
+    <title>Karadeg Dauce's Portfolio</title>
 </head>
 <body>
 
