test déploiement serveur

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <h1 class="header__logo">
-            Joe Blow
+            Karadeg Dauce
         </h1>
         <nav class="nav">
             <ul>
