Change index.html structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<html>
-     <head>
-          <title>Karadeg Daucé</title>
-     </head>
-     <body>
-          <h1>Karadeg Daucé</h1>
-     </body>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Karadeg Daucé</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  </head>
+  <body>
+    <main>
+        <h1>Photos</h1>  
+    </main>
+  </body>
 </html>
