--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karadeg Daucé</title>
-    <link rel="stylesheet" href="/scss/main.css">
+    <link rel="stylesheet" href="/scss/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <main>
-        <h1>Photos</h1>  
+        <nav>
+            <h1>Photos</h1>
+        </nav>
     </main>
   </body>
 </html>
