--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
     <title>Karadeg Daucé</title>
     <link rel="stylesheet" href="scss/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <script type="text/javascript" src="./js/index.js" defer></script>
   </head>
   <body>
-    <main>
-        <nav>
-            <h1>Photos</h1>
-        </nav>
-    </main>
+    <div class="frame" id="frame_1">
+      <div class="title">
+        <h1 id="title_homepage">KARAK</h1>
+        <div id="divider" class="divider"></div>
+        <p id="description">Designer et Photographe du bled</p>
+      </div>
+      <div class="click" id="click_container">
+        <button id="click">Cliquez !</button>
+      </div>
+    </div>
+    <div class="frame" id="frame_2">
+    </div>
+    <div class="frame" id="frame_3">
+    </div>
+    <div class="frame" id="frame_4">
+    </div>
+    <div class="frame" id="frame_5">
+    </div>
+    <div class="frame" id="frame_6">
+    </div>
+    <div class="frame" id="frame_7">
+    </div>
+    <div class="sidebar">
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+    </div>
   </body>
 </html>
