Fix image transition

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
       </div>
     </div>
     <div class="frame" id="frame_2">
+      <img src="./assets/angers.jpg" alt="">
     </div>
     <div class="frame" id="frame_3">
+      <img src="./assets/argentique.jpg" alt="">
     </div>
     <div class="frame" id="frame_4">
+      <img src="./assets/facade.jpg" alt="">
     </div>
     <div class="frame" id="frame_5">
+      <img src="./assets/fete_forraine.jpg" alt="">
     </div>
     <div class="frame" id="frame_6">
+      <img src="./assets/marche.jpg" alt="">
     </div>
     <div class="frame" id="frame_7">
     </div>
