--- a/index.html
+++ b/index.html
@@ -35,11 +35,30 @@
       <img src="./assets/marche.jpg" alt="">
     </div>
     <div class="frame" id="frame_7">
-    </div>
-    <div class="sidebar">
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <div class="photos_menu">
+        <h1 class="title_menu_photos">Photos</h1>
+        <ul class="liste_photos">
+          <li>ANGERS</li>
+          <li>ARGENTIQUE</li>
+          <li>FAÇADE</li>
+          <li>FÊTE FORRAINE</li>
+          <li>MARCHÉ</li>
+        </ul>
+      </div>
+      <div class="design_menu">
+        <h1 class="title_menu_designs">Designs</h1>
+        <ul class="liste_designs">
+          <li>CRÈCHE</li>
+          <li>BEATBUDDIES</li>
+          <li>PFE</li>
+        </ul>
+      </div>
+      <div class="arrow">
+        <svg width="143" height="249" viewBox="0 0 143 249" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M124.566 142.178L0.822325 18.434L18.5 0.756315L142.244 124.5L124.566 142.178Z" fill="black"/>
+          <path d="M0.822325 230.566L124.566 106.822L142.244 124.5L18.5 248.244L0.822325 230.566Z" fill="black"/>
+        </svg>
+      </div>
     </div>
   </body>
 </html>
