start switch of menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img src="./assets/marche.jpg" alt="">
     </div>
     <div class="frame" id="frame_7">
-      <div class="photos_menu">
+      <div id="photos_menu" class="photos_menu">
         <h1 id="title_menu_photos" class="title_menu_photos">Photos</h1>
         <ul class="liste_photos">
           <li class="list_element">ANGERS</li>
@@ -45,7 +45,7 @@
           <li class="list_element">MARCHÉ</li>
         </ul>
       </div>
-      <div class="design_menu">
+      <div id="design_menu" class="design_menu">
         <h1 class="title_menu_designs">Designs</h1>
         <ul class="liste_designs">
           <li>CRÈCHE</li>
